remote and local fix