@@ -1,8 +1,9 @@
-package com.softserve.edu.greencity.ui.tests;
+package com.softserve.edu.greencity.ui.tests.runner;
 
 import com.softserve.edu.greencity.ui.pages.common.WelcomePage;
 import com.softserve.edu.greencity.ui.tools.CommandLine;
 import com.softserve.edu.greencity.ui.tools.CredentialProperties;
+import com.softserve.edu.greencity.ui.tools.api.google.sheets.ValueProvider;
 import com.softserve.edu.greencity.ui.tools.grid.GridHub;
 import com.softserve.edu.greencity.ui.tools.grid.RegisterChrome;
 import io.github.bonigarcia.wdm.WebDriverManager;
@@ -31,56 +32,40 @@ import static org.openqa.selenium.support.ui.ExpectedConditions.invisibilityOfEl
 
 public abstract class GreenCityTestRunner {
     private static final String BASE_URL = "https://ita-social-projects.github.io/GreenCityClient/#/welcome";
-//    public static final String BASE_URL = "http://localhost:4200/#/welcome";
-
-    private final boolean CHROME_HEADLESS_OPTION = false;
-    private final String CHROME_LANGUAGE_OPTION = "en";
 
     protected final Logger logger = LoggerFactory.getLogger(this.getClass());
     protected RemoteWebDriver driver;
-
-    private ChromeOptions options = new ChromeOptions();
-@SneakyThrows
+    boolean remote = ValueProvider.remote();
+    ChromeOptions options = new ChromeOptions();
+    @SneakyThrows
     @BeforeSuite
     public void beforeSuite() {
-    options.addArguments("--disable-gpu");
-    options.addArguments("--disable-popup-blocking");
-    options.addArguments("--allow-failed-policy-fetch-for-test");
-    options.addArguments("--disable-browser-side-navigation");
-    options.addArguments("--incognito");
-    options.addArguments("--disable-notifications");
-    options.addArguments("--window-size=1920,1080","--no-sandbox","'--disable-dev-shm-usage");
-    options.addArguments("--headless");
+       new CredentialProperties().checkCredentialsExist();
+        new DriverSetup().optionsArguments();
         WebDriverManager.chromedriver().setup();
-
     }
 
-    /*  DesiredCapabilities desiredCap = DesiredCapabilities.Chrome();
-  desiredCap.SetCapability("headless", true);
-  desiredCap.SetCapability("platform", "LINUX");
-  desiredCap.SetCapability("version", "latest");
-
-      driver = new RemoteWebDriver(
-    new Uri("https://hub.testingbot.com/wd/hub/"), desiredCap
-  );*/
     @SneakyThrows
     @BeforeClass
     public void setUpBeforeClass() {
-
+        if (remote) {
         DesiredCapabilities capabilities = DesiredCapabilities.chrome();
         capabilities.setBrowserName("chrome");
         capabilities.setVersion("84.0");
         capabilities.setCapability("enableVNC", true);
         capabilities.setCapability("enableVideo", false);
-        capabilities.setCapability(ChromeOptions.CAPABILITY,options);
-        driver = new RemoteWebDriver(
-                URI.create("http://35.198.124.146:4444/wd/hub").toURL(),
-                capabilities
-        );
-
+        capabilities.setCapability(ChromeOptions.CAPABILITY, options);
+            driver = new RemoteWebDriver(
+                    URI.create("http://35.198.124.146:4444/wd/hub").toURL(),
+                    capabilities);
+        }else {
+            driver = new RemoteWebDriver(
+                    new URL("http://localhost:4444/wd/hub"),options);
+        }
         driver.manage().timeouts().implicitlyWait(5, TimeUnit.SECONDS);
         driver.manage().window().maximize();
     }
+
     @AfterClass(alwaysRun = true)
     public void tearDownAfterClass() {
         if (driver != null) {
@@ -98,41 +83,35 @@ public abstract class GreenCityTestRunner {
         if (!result.isSuccess()) {
             logger.warn("Test " + result.getName() + " ERROR");
         }
-        if (isLogInNow()){
-            signOutByStorage();}
+        if (isLogInNow()) {
+            signOutByStorage();
+        }
         //System.out.println("@AfterMethod tearDown");
         loggerTest();
     }
 
-    WelcomePage loadApplication() {
+    protected WelcomePage loadApplication() {
         return new WelcomePage(driver);
     }
-    //To Do
 
-    /**
-     * check sing in status by storage
-     * @return
-     */
     @Step("verifying that user is not login")
-    boolean isLogInNow() {
+    protected boolean isLogInNow() {
         new WebDriverWait(driver, 10).until(invisibilityOfElementLocated(By.id("form.sign-in-form")));
         RemoteExecuteMethod executeMethod = new RemoteExecuteMethod((RemoteWebDriver) driver);
         RemoteWebStorage webStorage = new RemoteWebStorage(executeMethod);
         return !((webStorage.getLocalStorage().getItem("name")) == null);
     }
 
-    /**
-     * sing out using storage
-     * @return
-     */
-    protected void signOutByStorage(){
+    @Step
+    protected void signOutByStorage() {
         RemoteExecuteMethod executeMethod = new RemoteExecuteMethod((RemoteWebDriver) driver);
         RemoteWebStorage webStorage = new RemoteWebStorage(executeMethod);
         webStorage.getLocalStorage().clear();
         driver.navigate().refresh();
     }
+
     @Step("download All WebDrivers")
-    protected void downloadAllDrivers(){
+    protected void downloadAllDrivers() {
         WebDriverManager.chromedriver().setup();
         WebDriverManager.firefoxdriver().setup();
         WebDriverManager.edgedriver().setup();
@@ -141,7 +120,8 @@ public abstract class GreenCityTestRunner {
         WebDriverManager.iedriver().setup();
         WebDriverManager.chromiumdriver().setup();
     }
-    public void loggerTest(){
+
+    public void loggerTest() {
         logger.info("logging from thread " + Thread.currentThread().getId());
         logger.info("\n----------------------------------------------------------------------------\n");
     }
